--- a/S-CoderMUI/reg.html
+++ b/S-CoderMUI/reg.html
@@ -18,6 +18,7 @@
 	
 	.mui-input-group label {
 		width: 22%;
+		font-size: 13px;
 	}
 	
 	.mui-input-row label~input,
@@ -43,7 +44,7 @@
 
 <body>
 <header class="mui-bar mui-bar-nav">
-	<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
+	<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" onclick="mui.back()"></a>
 	<h1 class="mui-title">注册</h1>
 </header>
 <div class="mui-content">
