--- a/S-CoderMUI/person.html
+++ b/S-CoderMUI/person.html
@@ -63,9 +63,11 @@
 				//console.log("所有plus api都应该在此事件发生后调用，否则会出现plus is undefined。"
 
 			});
-
+	mui.plusReady(function() { 
+		ifLogin();
+	}); 
 			$(function() {
-				ifLogin();
+				
 				getMine();
 			})
 			var username;
