--- a/S-CoderMUI/addNote.html
+++ b/S-CoderMUI/addNote.html
@@ -71,7 +71,7 @@
 			mui('body').on('tap', 'button', function() {
 				ifLogin();
 				var userId = localStorage.getItem("userId");
-				var userName=localStorage.getItem("userName");
+				var userName=localStorage.getItem("nickName");
 				var title = $("#title").val().trim();
 				var textarea = $("#textarea").val().trim();
 				if(!title || title == '') {
