--- a/S-CoderMUI/person.html
+++ b/S-CoderMUI/person.html
@@ -17,7 +17,7 @@
 				<img src="img/bg_01.jpg" />
 				<div class="cover"><img src="img/person_cover.jpg" /></div>
 				<div class="back" onclick="mui.back()"><img src="img/person_back.png"></div>
-				<h1 class="h1">Rhaast</h1>
+				<h1 class="h1"></h1>
 				<p>请尽情吩咐妲己，主人……</p>
 				<div class="touxiang"><img src="img/person_touxiang.png"></div>
 				<div class="job"><img src="img/person_sex.png">&nbsp;UI设计师</div>
@@ -38,7 +38,7 @@
 			</div>
 			<div class="main">
 				<img src="img/bg_02.jpg">
-				<h2>我的日程</h2>
+				<h2>我的动态</h2>
 				<div class="schedule">
 					<div class="r">
 						<img src="img/person_icons_note.png">
@@ -66,6 +66,7 @@
 	mui.plusReady(function() { 
 		ifLogin();
 	}); 
+	
 			$(function() {
 				
 				getMine();
