--- a/S-CoderMUI/mynotes.html
+++ b/S-CoderMUI/mynotes.html
@@ -22,7 +22,7 @@
 				<div class="back">
 					<a onclick="mui.back()" ><img src="img/person_back.png"></a>
 				</div>
-				<h1 class="h1">Rhaast</h1>
+				<h1 class="h1"></h1>
 				<div class="touxiang"><img src="img/person_touxiang.png"></div>
 				<a href="addNote.html"><button  class="mui-btn-green" >发布笔记</button></a>
 			</div>
@@ -77,7 +77,7 @@
 					}
 
 					$(".main").append(str);
-					$("h1").html(username);
+					
 				})
 			}
 
