--- a/S-CoderMUI/total.html
+++ b/S-CoderMUI/total.html
@@ -89,6 +89,11 @@
 				width: 14%;
 				padding-right: 10px;
 			}
+			
+			.mui-card-content{
+				height: 100px;
+				padding-left: 6%;
+			}
 		</style>
 	</head>
 
@@ -151,7 +156,7 @@
 							<a class="mui-action-back mui-btn mui-btn-link mui-pull-right">关闭</a>
 							<h1 class="mui-title">Home</h1>
 						</header>
-						<div id="pullrefresh" class="mui-content mui-scroll-wrapper">
+						<div id="pullrefresh" class="mui-content">
 							<div class="mui-scroll">
 								<div id="slider" class="mui-slider">
 									<div class="mui-slider-group mui-slider-loop">
@@ -201,27 +206,8 @@
 
 								</div>
 								<!--数据列表-->
-								<div class="xoded">
-									<ul class="mui-table-view mui-table-view-chevron">
-										<li class="mui-table-view-cell">
-											<a href="" class="mui-navigate-right">Item 1</a>
-										</li>
-										<li class="mui-table-view-cell">
-											<a href="" class="mui-navigate-right">Item 2</a>
-										</li>
-										<li class="mui-table-view-cell">
-											<a href="" class="mui-navigate-right">Item 3</a>
-										</li>
-										<li class="mui-table-view-cell">
-											<a href="" class="mui-navigate-right">Item 4</a>
-										</li>
-										<li class="mui-table-view-cell">
-											<a href="" class="mui-navigate-right">Item 5</a>
-										</li>
-										<li class="mui-table-view-cell">
-											<a href="" class="mui-navigate-right">Item 6</a>
-										</li>
-									</ul>
+								<div id="indexContent">
+									
 								</div>
 							</div>
 
@@ -393,6 +379,7 @@
 	}); 
 		$(function() {
 			getName();
+			getIndexContent();
 		})
 
 		function getName() {
@@ -400,6 +387,39 @@
 			$("#nickname").html(nickname);
 			var portrait = localStorage.getItem("portrait");
 			$(".touxiang img").attr("src", portrait);
+		}
+		
+		function getIndexContent(){
+			var now = new Date();
+
+				var mineUrl = "http://112.74.187.146:8080/studyapp/note/findAll";
+				$.get(mineUrl, function(result) {
+					var str = "";
+					if (result.detail == null) {
+						str = "<h3>当前没有发表笔记哦！</h3>";
+					} else {
+						for (var i = 0; i < result.detail.length; i++) {
+							var title = result.detail[i].title;
+							var content = result.detail[i].content;
+							var commentNum = result.detail[i].commentNum;
+							username = result.detail[i].userName;
+							var createTime = new Date(result.detail[i].createTime);
+							var diffTime = (now - createTime) / (1000 * 60);
+							if (diffTime <= 3) {
+								createTime = "刚刚";
+							} else if (diffTime > 3 && diffTime < 10) {
+								createTime = "三分钟前";
+							} else {
+								createTime = createTime.getFullYear() + "年" + (createTime.getMonth() + 1) + "月" + createTime.getDate() + "日";
+							}
+							str +=  '<div class="mui-card"><div class="mui-card-header">'+title+'<div class="mui-media-body"><a href="other.html?id='+result.detail[i].userId+'">'+username+'</a></div></div>';
+							str+='<div class="mui-card-content">'+content+'</div>';
+							str+='	<div class="mui-card-footer">发布时间：' + createTime + '<span>评论：' + commentNum + '条</span></div></div>';			
+						}
+					}
+
+					$("#indexContent").append(str);
+				})
 		}
 	</script>
 
