--- a/S-CoderMUI/addNote.html
+++ b/S-CoderMUI/addNote.html
@@ -47,13 +47,13 @@
 		</header>
 		<div class="mui-content">
 
-			<div class="mui-input-row">
+			<div class="mui-input">
 				<label>标题</label>
-				<input id='title' type="text" class="mui-input-clear mui-input" placeholder="请输入账号">
+				<input id='title' type="text" class="mui-input-clear mui-input" placeholder="请输入标题">
 			</div>
-			<div class="mui-input-speech">
+			<div class="mui-input">
 				<label>内容</label>
-				<textarea id="textarea" rows="5" class="mui-input-clear mui-input" placeholder="因版本原因，暂时不能超过500字！">
+				<textarea id="textarea" rows="5" class="mui-input mui-input-clear" placeholder="因版本原因，暂时不能超过500字！">
 						</textarea>
 			</div>
 
