--- a/S-CoderMUI/person.html
+++ b/S-CoderMUI/person.html
@@ -49,7 +49,7 @@
 					<div class="r">
 						<img src="img/person_icons_question.png">
 						<p class="myNote">
-							<a href="https://www.baidu.com/">我的提问</a>
+							<a href="myquestions.html">我的提问</a>
 						</p>
 					</div>
 				</div>
