--- a/S-CoderMUI/login.html
+++ b/S-CoderMUI/login.html
@@ -45,7 +45,7 @@
 					<a id='reg' href="reg.html"> sign up</a>
 				</div>
 				<div class="mui-content-padded">
-					<button id='login' class="mui-btn mui-btn-block mui-btn-primary">Login</button>
+					<button id='login' class="mui-btn mui-btn-block mui-btn-primary" type="button">Login</button>
 				</div>
 
 				<div class="mui-content-padded oauth-area">
