--- a/S-CoderMUI/person.html
+++ b/S-CoderMUI/person.html
@@ -18,13 +18,14 @@
 				<div class="cover"><img src="img/person_cover.jpg" /></div>
 				<div class="back" onclick="mui.back()"><img src="img/person_back.png"></div>
 				<h1 class="h1"></h1>
-				<p>请尽情吩咐妲己，主人……</p>
+				<!--<p>请尽情吩咐妲己，主人……</p>-->
 				<div class="touxiang"><img src="img/person_touxiang.png"></div>
-				<div class="job"><img src="img/person_sex.png">&nbsp;UI设计师</div>
+				<!--<div class="job"><img src="img/person_sex.png">&nbsp;UI设计师</div>-->
 				<div class="message">
 					<div class="l">
-						<h2>ID：</h2>
-						<em>598652</em>
+						<img src="img/person_sex.png" style="width: 30%;">
+						<!--<h2>ID：</h2>
+						<em>598652</em>-->
 					</div>
 					<div class="l">
 						<h2>得分</h2>
